--- a/src/main/webapp/ecommerce-product-details.html
+++ b/src/main/webapp/ecommerce-product-details.html
@@ -7,21 +7,7 @@
 
     <!-- Title -->
     <title>Product Details - E-commerce | Front - Admin &amp; Dashboard Template</title>
-
-    <!-- Favicon -->
-    <link rel="shortcut icon" href="favicon.ico">
-
-    <!-- Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-
-    <!-- CSS Implementing Plugins -->
-    <link rel="stylesheet" href="assets\css\vendor.min.css">
-    <link rel="stylesheet" href="assets\vendor\icon-set\style.css">
-    
-    
-
-    <!-- CSS Front Template -->
-    <link rel="stylesheet" href="assets\css\theme.min.css?v=1.0">
+    <%@include file="common/common-css.jsp" %>
   </head>
 
   <body class="   footer-offset">
