--- a/src/main/webapp/user-profile-connections.html
+++ b/src/main/webapp/user-profile-connections.html
@@ -1777,12 +1777,12 @@ pageEncoding="UTF-8" %>
 
                     <ul id="navLinkPagesDropdownEcommerceProducts" class="hs-sub-menu dropdown-menu dropdown-menu-lg" aria-labelledby="pagesDropdownEcommerceSublevel" style="min-width: 16rem;">
                       <li>
-                        <a class="dropdown-item" href="ecommerce-products.html">
+                        <a class="dropdown-item" href="ecommerce-products.jsp">
                           <span class="tio-circle-outlined nav-indicator-icon"></span> Products
                         </a>
                       </li>
                       <li>
-                        <a class="dropdown-item" href="ecommerce-product-details.html">
+                        <a class="dropdown-item" href="ecommerce-product-details.jsp">
                           <span class="tio-circle-outlined nav-indicator-icon"></span> Product Details
                         </a>
                       </li>
@@ -1838,7 +1838,7 @@ pageEncoding="UTF-8" %>
                   </li>
 
                   <li>
-                    <a class="dropdown-item" href="ecommerce-manage-reviews.html">
+                    <a class="dropdown-item" href="ecommerce-manage-reviews.jsp">
                       <span class="tio-circle-outlined nav-indicator-icon"></span> Manage Reviews
                     </a>
                   </li>
@@ -3017,12 +3017,12 @@ pageEncoding="UTF-8" %>
 
                       <ul id="navLinkPagesDropdownEcommerceProducts" class="hs-sub-menu dropdown-menu dropdown-menu-lg" aria-labelledby="pagesDropdownEcommerceSublevel" style="min-width: 16rem;">
                         <li>
-                          <a class="dropdown-item" href="ecommerce-products.html">
+                          <a class="dropdown-item" href="ecommerce-products.jsp">
                             <span class="tio-circle-outlined nav-indicator-icon"></span> Products
                           </a>
                         </li>
                         <li>
-                          <a class="dropdown-item" href="ecommerce-product-details.html">
+                          <a class="dropdown-item" href="ecommerce-product-details.jsp">
                             <span class="tio-circle-outlined nav-indicator-icon"></span> Product Details
                           </a>
                         </li>
@@ -3078,7 +3078,7 @@ pageEncoding="UTF-8" %>
                     </li>
 
                     <li>
-                      <a class="dropdown-item" href="ecommerce-manage-reviews.html">
+                      <a class="dropdown-item" href="ecommerce-manage-reviews.jsp">
                         <span class="tio-circle-outlined nav-indicator-icon"></span> Manage Reviews
                       </a>
                     </li>
@@ -3549,13 +3549,13 @@ pageEncoding="UTF-8" %>
 
                     <ul class="js-navbar-vertical-aside-submenu nav nav-sub">
                       <li class="nav-item">
-                        <a class="nav-link " href="ecommerce-products.html" title="Products">
+                        <a class="nav-link " href="ecommerce-products.jsp" title="Products">
                           <span class="tio-circle nav-indicator-icon"></span>
                           <span class="text-truncate">Products</span>
                         </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link " href="ecommerce-product-details.html" title="Product Details">
+                        <a class="nav-link " href="ecommerce-product-details.jsp" title="Product Details">
                           <span class="tio-circle nav-indicator-icon"></span>
                           <span class="text-truncate">Product Details</span>
                         </a>
@@ -3620,7 +3620,7 @@ pageEncoding="UTF-8" %>
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link " href="ecommerce-manage-reviews.html" title="Manage Reviews">
+                    <a class="nav-link " href="ecommerce-manage-reviews.jsp" title="Manage Reviews">
                       <span class="tio-circle-outlined nav-indicator-icon"></span>
                       <span class="text-truncate">Manage Reviews</span>
                     </a>
@@ -4317,13 +4317,13 @@ pageEncoding="UTF-8" %>
 
                   <ul class="js-navbar-vertical-aside-submenu nav nav-sub">
                     <li class="nav-item">
-                      <a class="nav-link " href="ecommerce-products.html" title="Products">
+                      <a class="nav-link " href="ecommerce-products.jsp" title="Products">
                         <span class="tio-circle nav-indicator-icon"></span>
                         <span class="text-truncate">Products</span>
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link " href="ecommerce-product-details.html" title="Product Details">
+                      <a class="nav-link " href="ecommerce-product-details.jsp" title="Product Details">
                         <span class="tio-circle nav-indicator-icon"></span>
                         <span class="text-truncate">Product Details</span>
                       </a>
@@ -4388,7 +4388,7 @@ pageEncoding="UTF-8" %>
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link " href="ecommerce-manage-reviews.html" title="Manage Reviews">
+                  <a class="nav-link " href="ecommerce-manage-reviews.jsp" title="Manage Reviews">
                     <span class="tio-circle-outlined nav-indicator-icon"></span>
                     <span class="text-truncate">Manage Reviews</span>
                   </a>
