--- a/src/main/webapp/apps-invoice-generator.html
+++ b/src/main/webapp/apps-invoice-generator.html
@@ -1774,12 +1774,12 @@
 
                     <ul id="navLinkPagesDropdownEcommerceProducts" class="hs-sub-menu dropdown-menu dropdown-menu-lg" aria-labelledby="pagesDropdownEcommerceSublevel" style="min-width: 16rem;">
                       <li>
-                        <a class="dropdown-item" href="ecommerce-products.html">
+                        <a class="dropdown-item" href="ecommerce-products.jsp">
                           <span class="tio-circle-outlined nav-indicator-icon"></span> Products
                         </a>
                       </li>
                       <li>
-                        <a class="dropdown-item" href="ecommerce-product-details.html">
+                        <a class="dropdown-item" href="ecommerce-product-details.jsp">
                           <span class="tio-circle-outlined nav-indicator-icon"></span> Product Details
                         </a>
                       </li>
@@ -1835,7 +1835,7 @@
                   </li>
 
                   <li>
-                    <a class="dropdown-item" href="ecommerce-manage-reviews.html">
+                    <a class="dropdown-item" href="ecommerce-manage-reviews.jsp">
                       <span class="tio-circle-outlined nav-indicator-icon"></span> Manage Reviews
                     </a>
                   </li>
@@ -3014,12 +3014,12 @@
 
                       <ul id="navLinkPagesDropdownEcommerceProducts" class="hs-sub-menu dropdown-menu dropdown-menu-lg" aria-labelledby="pagesDropdownEcommerceSublevel" style="min-width: 16rem;">
                         <li>
-                          <a class="dropdown-item" href="ecommerce-products.html">
+                          <a class="dropdown-item" href="ecommerce-products.jsp">
                             <span class="tio-circle-outlined nav-indicator-icon"></span> Products
                           </a>
                         </li>
                         <li>
-                          <a class="dropdown-item" href="ecommerce-product-details.html">
+                          <a class="dropdown-item" href="ecommerce-product-details.jsp">
                             <span class="tio-circle-outlined nav-indicator-icon"></span> Product Details
                           </a>
                         </li>
@@ -3075,7 +3075,7 @@
                     </li>
 
                     <li>
-                      <a class="dropdown-item" href="ecommerce-manage-reviews.html">
+                      <a class="dropdown-item" href="ecommerce-manage-reviews.jsp">
                         <span class="tio-circle-outlined nav-indicator-icon"></span> Manage Reviews
                       </a>
                     </li>
@@ -3546,13 +3546,13 @@
 
                     <ul class="js-navbar-vertical-aside-submenu nav nav-sub">
                       <li class="nav-item">
-                        <a class="nav-link " href="ecommerce-products.html" title="Products">
+                        <a class="nav-link " href="ecommerce-products.jsp" title="Products">
                           <span class="tio-circle nav-indicator-icon"></span>
                           <span class="text-truncate">Products</span>
                         </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link " href="ecommerce-product-details.html" title="Product Details">
+                        <a class="nav-link " href="ecommerce-product-details.jsp" title="Product Details">
                           <span class="tio-circle nav-indicator-icon"></span>
                           <span class="text-truncate">Product Details</span>
                         </a>
@@ -3617,7 +3617,7 @@
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link " href="ecommerce-manage-reviews.html" title="Manage Reviews">
+                    <a class="nav-link " href="ecommerce-manage-reviews.jsp" title="Manage Reviews">
                       <span class="tio-circle-outlined nav-indicator-icon"></span>
                       <span class="text-truncate">Manage Reviews</span>
                     </a>
@@ -4314,13 +4314,13 @@
 
                   <ul class="js-navbar-vertical-aside-submenu nav nav-sub">
                     <li class="nav-item">
-                      <a class="nav-link " href="ecommerce-products.html" title="Products">
+                      <a class="nav-link " href="ecommerce-products.jsp" title="Products">
                         <span class="tio-circle nav-indicator-icon"></span>
                         <span class="text-truncate">Products</span>
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link " href="ecommerce-product-details.html" title="Product Details">
+                      <a class="nav-link " href="ecommerce-product-details.jsp" title="Product Details">
                         <span class="tio-circle nav-indicator-icon"></span>
                         <span class="text-truncate">Product Details</span>
                       </a>
@@ -4385,7 +4385,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link " href="ecommerce-manage-reviews.html" title="Manage Reviews">
+                  <a class="nav-link " href="ecommerce-manage-reviews.jsp" title="Manage Reviews">
                     <span class="tio-circle-outlined nav-indicator-icon"></span>
                     <span class="text-truncate">Manage Reviews</span>
                   </a>
