--- a/src/main/webapp/error-404.html
+++ b/src/main/webapp/error-404.html
@@ -1771,12 +1771,12 @@
 
                     <ul id="navLinkPagesDropdownEcommerceProducts" class="hs-sub-menu dropdown-menu dropdown-menu-lg" aria-labelledby="pagesDropdownEcommerceSublevel" style="min-width: 16rem;">
                       <li>
-                        <a class="dropdown-item" href="ecommerce-products.html">
+                        <a class="dropdown-item" href="ecommerce-products.jsp">
                           <span class="tio-circle-outlined nav-indicator-icon"></span> Products
                         </a>
                       </li>
                       <li>
-                        <a class="dropdown-item" href="ecommerce-product-details.html">
+                        <a class="dropdown-item" href="ecommerce-product-details.jsp">
                           <span class="tio-circle-outlined nav-indicator-icon"></span> Product Details
                         </a>
                       </li>
@@ -1832,7 +1832,7 @@
                   </li>
 
                   <li>
-                    <a class="dropdown-item" href="ecommerce-manage-reviews.html">
+                    <a class="dropdown-item" href="ecommerce-manage-reviews.jsp">
                       <span class="tio-circle-outlined nav-indicator-icon"></span> Manage Reviews
                     </a>
                   </li>
@@ -3011,12 +3011,12 @@
 
                       <ul id="navLinkPagesDropdownEcommerceProducts" class="hs-sub-menu dropdown-menu dropdown-menu-lg" aria-labelledby="pagesDropdownEcommerceSublevel" style="min-width: 16rem;">
                         <li>
-                          <a class="dropdown-item" href="ecommerce-products.html">
+                          <a class="dropdown-item" href="ecommerce-products.jsp">
                             <span class="tio-circle-outlined nav-indicator-icon"></span> Products
                           </a>
                         </li>
                         <li>
-                          <a class="dropdown-item" href="ecommerce-product-details.html">
+                          <a class="dropdown-item" href="ecommerce-product-details.jsp">
                             <span class="tio-circle-outlined nav-indicator-icon"></span> Product Details
                           </a>
                         </li>
@@ -3072,7 +3072,7 @@
                     </li>
 
                     <li>
-                      <a class="dropdown-item" href="ecommerce-manage-reviews.html">
+                      <a class="dropdown-item" href="ecommerce-manage-reviews.jsp">
                         <span class="tio-circle-outlined nav-indicator-icon"></span> Manage Reviews
                       </a>
                     </li>
@@ -3543,13 +3543,13 @@
 
                     <ul class="js-navbar-vertical-aside-submenu nav nav-sub">
                       <li class="nav-item">
-                        <a class="nav-link " href="ecommerce-products.html" title="Products">
+                        <a class="nav-link " href="ecommerce-products.jsp" title="Products">
                           <span class="tio-circle nav-indicator-icon"></span>
                           <span class="text-truncate">Products</span>
                         </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link " href="ecommerce-product-details.html" title="Product Details">
+                        <a class="nav-link " href="ecommerce-product-details.jsp" title="Product Details">
                           <span class="tio-circle nav-indicator-icon"></span>
                           <span class="text-truncate">Product Details</span>
                         </a>
@@ -3614,7 +3614,7 @@
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link " href="ecommerce-manage-reviews.html" title="Manage Reviews">
+                    <a class="nav-link " href="ecommerce-manage-reviews.jsp" title="Manage Reviews">
                       <span class="tio-circle-outlined nav-indicator-icon"></span>
                       <span class="text-truncate">Manage Reviews</span>
                     </a>
@@ -4311,13 +4311,13 @@
 
                   <ul class="js-navbar-vertical-aside-submenu nav nav-sub">
                     <li class="nav-item">
-                      <a class="nav-link " href="ecommerce-products.html" title="Products">
+                      <a class="nav-link " href="ecommerce-products.jsp" title="Products">
                         <span class="tio-circle nav-indicator-icon"></span>
                         <span class="text-truncate">Products</span>
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link " href="ecommerce-product-details.html" title="Product Details">
+                      <a class="nav-link " href="ecommerce-product-details.jsp" title="Product Details">
                         <span class="tio-circle nav-indicator-icon"></span>
                         <span class="text-truncate">Product Details</span>
                       </a>
@@ -4382,7 +4382,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link " href="ecommerce-manage-reviews.html" title="Manage Reviews">
+                  <a class="nav-link " href="ecommerce-manage-reviews.jsp" title="Manage Reviews">
                     <span class="tio-circle-outlined nav-indicator-icon"></span>
                     <span class="text-truncate">Manage Reviews</span>
                   </a>
